<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.local.LocalSummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/local_raspberry"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/blue"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/black"
            app:civ_shadow_radius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularImageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/fragment_local_summary_btn_connect_cloud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:text="@string/local_connect_to_cloud" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_local_summary_settings_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_local_summary_device_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/local_device_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_local_summary_device_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/local_device_description" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/fragment_local_summary_network_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_network"
                        android:textSize="18sp"
                        app:drawableEndCompat="@drawable/ic_edit" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_local_summary_network_connection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/local_device_connection"
                            android:enabled="false"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/fragment_local_summary_network_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connected_to_internet"
                        android:enabled="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/fragment_local_summary_device_settings_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings"
                        android:textSize="18sp"
                        app:drawableEndCompat="@drawable/ic_edit" />

                    <TextView
                        android:id="@+id/fragment_local_summary_aes_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_local_summary_is_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings_is_main"
                        android:enabled="false"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_local_summary_measure_consumption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings_measure_consumption"
                        android:enabled="false"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_local_summary_measure_feed_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings_measure_feed_in"
                        android:enabled="false"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_local_summary_is_direct_feed_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings_is_direct_feed_in"
                        android:enabled="false"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_local_summary_is_overflow_feed_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_device_settings_is_overflow_feed_in"
                        android:enabled="false"/>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>